[package]
name = "api_watcher"
version = "0.1.0"
authors = ["Pedro Escudero <pedroescudero.zumel@gmail.com>"]
documentation = "https://github.com/pedroescudero/"
edition = "2021"

[dependencies]
rocket = "0.4.1"
diesel = { version = "1.4.0", features = ["postgres"] }
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
cronjob = "0.3.17"
job_scheduler = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "diesel_postgres_pool"]
